--- a/src/NuGetGallery/Views/Packages/DisplayPackage.cshtml
+++ b/src/NuGetGallery/Views/Packages/DisplayPackage.cshtml
@@ -218,6 +218,37 @@
                 </div>
             </div>
 
+            @if (Model.ReadMeHtml != null)
+            {
+                <div id="readme-collapser-container">
+                    <h2>
+                        <a href="#" role="button" data-toggle="collapse" data-target="#readme-container"
+                           aria-expanded="true" aria-controls="readme-container" id="show-readme-container">
+                            <i class="ms-Icon ms-Icon--ChevronDown" aria-hidden="true"></i>
+                            <span>Documentation</span>
+                        </a>
+                    </h2>
+                </div>
+                <div id="readme-container" class="collapse in">
+                    <div id="readme-clamped" class="collapse in">
+                        @Html.Raw(Model.ReadMeHtml)
+                    </div>
+                    <script type="text/javascript">
+                        readmeClamp.setAttribute("class", "collapse in");
+                    </script>
+                    <div id="readme-original" class="collapse">
+                        @Html.Raw(Model.ReadMeHtml)
+                    </div>
+
+                    <button class="btn btn-link btn-expander" id="show-readme-original" aria-expanded="false"
+                            aria-controls="readme-original" type="button" data-toggle="collapse" data-target="#readme-original">
+                        <i class="ms-Icon ms-Icon--CalculatorAddition" aria-hidden="true"></i>
+                        <span>Show more</span>
+                    </button>
+                </div>
+            }
+           
+
             @if (!String.IsNullOrWhiteSpace(Model.ReleaseNotes))
             {
                 <h2>Release Notes</h2>
