Implemented edit functionality

--- a/src/NuGetGallery/Views/Packages/_EditMetadata.cshtml
+++ b/src/NuGetGallery/Views/Packages/_EditMetadata.cshtml
@@ -41,7 +41,7 @@
     </div>
 </script>
 
-<script type="text/html" id="edit-metadata-template">
+<script type="text/html" id="verify-metadata-template">
     <div class="collapse in">
         <div data-bind="if: $data">
 
