Double merge errors

--- a/src/NuGetGallery/Views/Packages/DisplayPackage.cshtml
+++ b/src/NuGetGallery/Views/Packages/DisplayPackage.cshtml
@@ -230,7 +230,7 @@
                     </h2>
                 </div>
                 <div id="readme-container" class="collapse in">
-                    <div id="readme-clamped" class="collapse in">
+                    <div id="readme-clamped" class="collapse in" style="max-height: 228.57px">
                         @Html.Raw(Model.ReadMeHtml)
                     </div>
                     <script type="text/javascript">
