Cleanup and HtmlSanitizer tests

--- a/src/NuGetGallery/Views/Packages/_EditMetadata.cshtml
+++ b/src/NuGetGallery/Views/Packages/_EditMetadata.cshtml
@@ -118,7 +118,7 @@
                 </div>
 
                 <div class="verify-package-field form-group editable">
-                    <div class="verify-package-field-heading">Repository URL</div>
+                    <div class="verify-package-field-heading"><label for="repositoryurl-field">Repository URL</label></div>
                     <input data-bind="value: Edit.RepositoryUrl" type="text" class="form-control" name="Edit.RepositoryUrl" id="repositoryurl-field" />
                 </div>
 
