Remove duplicate readme JS code

--- a/src/NuGetGallery/Views/Packages/Edit.cshtml
+++ b/src/NuGetGallery/Views/Packages/Edit.cshtml
@@ -69,6 +69,7 @@
 @section BottomScripts {
     @Scripts.Render("~/Scripts/jquery-ui-1.10.3.js")
     @Scripts.Render("~/Scripts/gallery/bootstrap.js")
+    @Scripts.Render("~/Scripts/gallery/page-edit-readme.js")
     @Scripts.Render("~/Scripts/gallery/page-edit.js")
     <script>
         $(function () {
