--- a/src/NuGetGallery/Views/Packages/_ImportReadMe.cshtml
+++ b/src/NuGetGallery/Views/Packages/_ImportReadMe.cshtml
@@ -40,7 +40,7 @@
 
         <div class="readme-tabs">
             <ul class="nav nav-tabs" role="tablist">
-                @ReadMeTab("Custom", "readme-write", active: true)
+                @ReadMeTab("Custom", "readme-written", active: true)
                 @ReadMeTab("Url", "readme-url", active: false)
                 @ReadMeTab("File", "readme-file", active: false)
             </ul>
@@ -52,10 +52,10 @@
                             <button type="button" class="btn btn-primary markdown-popover" data-toggle="popover" title="Markdown Syntax">Markdown</button>
                         </div>
                         <div>
-                            <textarea class="col-xs-12" data-bind="value: Edit.ReadMe.SourceText" name="Edit.ReadMe.SourceText" id="readme-written" rows="30" placeholder="Write your own ReadMe here..."></textarea>
+                            <textarea class="col-xs-12" data-bind="value: Edit.ReadMe.SourceText" name="Edit.ReadMe.SourceText" id="ReadMeTextInput" rows="30" placeholder="Write your own ReadMe here..."></textarea>
                         </div>
                     </div>,
-                    "readme-write", active: true)
+                    "readme-written", active: true)
 
                 @ReadMePanel(
                     @<div class="input-group col-xs-12">
@@ -66,10 +66,10 @@
 
                 @ReadMePanel(
                     @<div class="input-group col-xs-12">
-                        <input type="text" id="readme-select-feedback" class="form-control" value="Browse or Drop files to select a ReadMe.md file..." aria-label="Upload Your ReadMe.md" readonly />
-                        <label for="readme-select-file" id="ReadMeFileLabel" class="input-group-btn">
+                        <input type="text" id="ReadMeFileText" class="form-control" value="Browse or Drop files to select a ReadMe.md file..." aria-label="Upload Your ReadMe.md" readonly />
+                        <label for="ReadMeFileInput" id="ReadMeFileLabel" class="input-group-btn">
                             <span class="btn btn-primary form-control" aria-label="Browse for ReadMe.md file" role="button">
-                                Browse&hellip;<input type="file" accept=".md,.txt" data-bind="value: Edit.ReadMe.SourceFile" name="Edit.ReadMe.SourceFile" aria-labelledby="ReadMeFileLabel" id="readme-select-file" style="display:none;" />
+                                Browse&hellip;<input type="file" accept=".md,.txt" data-bind="value: Edit.ReadMe.SourceFile" name="Edit.ReadMe.SourceFile" aria-labelledby="ReadMeFileLabel" id="ReadMeFileInput" style="display:none;" />
                             </span>
                         </label>
                     </div>                ,
